col widths matched across pages

--- a/about-us.html
+++ b/about-us.html
@@ -54,37 +54,37 @@
     </header>
 
     <main>
-        <div class="container p-4">
-            <div class="row g-3 mb-3">
-                <div class="col">
+        <div class="container px-4">
+            <div class="row justify-content-center p-2 my-sm-2 mb-3 g-3">
+                <div class="col-12 col-md-8">
                     <div class="p-3 bg-dark text-white">
                         <h1 class="text-md-center">About Us</h1>
                         <p class="text-md-center mb-0">Keep reading to learn more about Fine Arts Community Education.</p>
                     </div>
                 </div>
             </div>
-            <div class="row g-3 mb-3">
-                <div class="col">
+            <div class="row justify-content-center g-3 mb-3">
+                <div class="col-6 col-md-4">
                     <div class="p-3 bg-dark text-white">
                         <h2>Our Location</h2>
                         <p class="mb-0">Lorem ipsum.</p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-6 col-md-4">
                     <div class="p-3 bg-dark text-white">
                         <h2>Our Building</h2>
                         <p class="mb-0">Lorem ipsum.</p>
                     </div>
                 </div>
             </div>
-            <div class="row g-3 mb-3">
-                <div class="col">
+            <div class="row justify-content-center g-3 mb-3">
+                <div class="col-6 col-md-4">
                     <div class="p-3 bg-dark text-white">
                         <h2>Our History</h2>
                         <p class="mb-0">Lorem ipsum.</p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-6 col-md-4">
                     <div class="p-3 bg-dark text-white">
                         <h2>Our Mission</h2>
                         <p class="mb-0">Lorem ipsum.</p>
