--- a/courses.html
+++ b/courses.html
@@ -56,9 +56,9 @@
     <main>
 
         <section class="container-fluid courses-banner">
-            <div class="py-3 text-center container">
+            <div class="container">
                 <div class="row py-lg-5">
-                    <div class="col-lg-6 col-md-8 bg-success mx-auto p-2 p-sm-3 p-lg-5">
+                    <div class="col-12 col-md-8 bg-success mx-auto p-2 p-sm-3 p-lg-5 text-center">
                         <h1 class="fw-light text-white">Courses</h1>
                         <p class="lead text-white">Something short and leading about the collection below—its contents, the
                             creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it
