--- a/instructors.html
+++ b/instructors.html
@@ -56,8 +56,8 @@
     <main>
         <div class="container">
 
-            <div class="row justify-content-center justify-content-md-start p-2 mb-5 my-sm-2">
-                <div class="col-12 col-md-10 col-lg-9 bg-white">
+            <div class="row justify-content-center p-2 my-sm-2 mb-3 g-3">
+                <div class="col-12 col-md-8 bg-white">
                     <div class="row">
                         <div class="col-12 text-center p-3 pt-md-5">
                             <h1>Learn from Creative Professionals</h1>
