age group and membership level added

--- a/fees.html
+++ b/fees.html
@@ -56,7 +56,7 @@
     <main>
         <div class="container p-4">
             <div class="row g-3 mb-3">
-                <div class="col-12 col-md-6 col-lg-8">
+                <div class="col-12 col-lg-8">
 
                     <div class="p-3 bg-dark text-white">
                         <h1 class="text-md-center">Fees</h1>
@@ -83,7 +83,7 @@
                                     <tr>
                                         <td>
                                         <div class="form-check">
-                                            <input class="form-check-input mx-auto" type="checkbox" value="50" id="course01">
+                                            <input class="form-check-input mx-auto" type="checkbox" value="50" data="Learn Painting" id="course01">
                                         </div>
                                         </td>
                                         <td>Learn Painting</td>
@@ -93,7 +93,7 @@
                                     <tr class="d-none" id="course01child">
                                         <td>
                                         <div class="form-check">
-                                            <input class="form-check-input mx-auto" type="checkbox" value="100" id="course01supplies">
+                                            <input class="form-check-input mx-auto" type="checkbox" value="100" data="Supplies Kit for Learn Painting" id="course01supplies">
                                         </div>
                                         </td>
                                         <td colspan="2" class="ps-sm-3 ps-md-5">Supplies Kit for "Learn Painting"</td>
@@ -102,7 +102,7 @@
                                     <tr>
                                         <td>
                                         <div class="form-check">
-                                            <input class="form-check-input mx-auto" type="checkbox" value="0" id="course02">
+                                            <input class="form-check-input mx-auto" type="checkbox" value="0" data="Great Books Story Time" id="course02">
                                         </div>
                                         </td>
                                         <td>Great Books Story Time</td>
@@ -112,7 +112,7 @@
                                     <tr>
                                         <td>
                                         <div class="form-check">
-                                            <input class="form-check-input mx-auto" type="checkbox" value="100" id="course03">
+                                            <input class="form-check-input mx-auto" type="checkbox" value="100" data="Sunday Speaker Series" id="course03">
                                         </div>
                                         </td>
                                         <td>Sunday Speaker Series</td>
@@ -122,7 +122,7 @@
                                     <tr>
                                         <td>
                                         <div class="form-check">
-                                            <input class="form-check-input mx-auto" type="checkbox" value="50" id="course04">
+                                            <input class="form-check-input mx-auto" type="checkbox" value="50" data="Have Fun with Art" id="course04">
                                         </div>
                                         </td>
                                         <td>Have Fun with Art</td>
@@ -132,7 +132,7 @@
                                     <tr class="d-none" id="course04child">
                                         <td>
                                         <div class="form-check">
-                                            <input class="form-check-input mx-auto" type="checkbox" value="100" id="course04supplies">
+                                            <input class="form-check-input mx-auto" type="checkbox" value="100" data="Supplies Kit for Have Fun with Art" id="course04supplies">
                                         </div>
                                         </td>
                                         <td colspan="2" class="ps-sm-3 ps-md-5">Supplies Kit for "Have Fun with Art"</td>
@@ -141,7 +141,7 @@
                                     <tr>
                                         <td>
                                         <div class="form-check">
-                                            <input class="form-check-input mx-auto" type="checkbox" value="50" id="course05">
+                                            <input class="form-check-input mx-auto" type="checkbox" value="50" data="Learn Photography" id="course05">
                                         </div>
                                         </td>
                                         <td>Learn Photography</td>
@@ -151,7 +151,7 @@
                                     <tr class="d-none" id="course05child">
                                         <td>
                                         <div class="form-check">
-                                            <input class="form-check-input mx-auto" type="checkbox" value="50" id="course05supplies">
+                                            <input class="form-check-input mx-auto" type="checkbox" value="50" data="Supplies Kit for Learn Photography" id="course05supplies">
                                         </div>
                                         </td>
                                         <td colspan="2" class="ps-sm-3 ps-md-5">Supplies Kit for "Learn Photography"</td>
@@ -160,7 +160,7 @@
                                     <tr>
                                         <td>
                                         <div class="form-check">
-                                            <input class="form-check-input mx-auto" type="checkbox" value="10" id="course06">
+                                            <input class="form-check-input mx-auto" type="checkbox" value="10" data="Comedic Improv" id="course06">
                                         </div>
                                         </td>
                                         <td>Comedic Improv</td>
@@ -170,7 +170,7 @@
                                     <tr>
                                         <td>
                                         <div class="form-check">
-                                            <input class="form-check-input mx-auto" type="checkbox" value="5" id="course07">
+                                            <input class="form-check-input mx-auto" type="checkbox" value="5" data="Orchestra Rehearsal" id="course07">
                                         </div>
                                         </td>
                                         <td>Orchestra Rehearsal</td>
@@ -180,7 +180,7 @@
                                     <tr>
                                         <td>
                                         <div class="form-check">
-                                            <input class="form-check-input mx-auto" type="checkbox" value="5" id="course08">
+                                            <input class="form-check-input mx-auto" type="checkbox" value="5" data="3-D Printing for Everyone" id="course08">
                                         </div>
                                         </td>
                                         <td>3-D Printing for Everyone</td>
@@ -190,7 +190,7 @@
                                     <tr class="d-none" id="course08child">
                                         <td>
                                         <div class="form-check">
-                                            <input class="form-check-input mx-auto" type="checkbox" value="75" id="course08supplies">
+                                            <input class="form-check-input mx-auto" type="checkbox" value="75" data="Supplies Kit for 3-D Printing for Everyone" id="course08supplies">
                                         </div>
                                         </td>
                                         <td colspan="2" class="ps-sm-3 ps-md-5">Supplies Kit for "3-D Printing for Everyone"</td>
@@ -199,7 +199,7 @@
                                     <tr>
                                         <td>
                                         <div class="form-check">
-                                            <input class="form-check-input mx-auto" type="checkbox" value="30" id="course09">
+                                            <input class="form-check-input mx-auto" type="checkbox" value="30" data="Maker Culture for Kids" id="course09">
                                         </div>
                                         </td>
                                         <td>Maker Culture for Kids</td>
@@ -209,7 +209,7 @@
                                     <tr class="d-none" id="course09child">
                                         <td>
                                         <div class="form-check">
-                                            <input class="form-check-input mx-auto" type="checkbox" value="100" id="course09supplies">
+                                            <input class="form-check-input mx-auto" type="checkbox" value="100" data="Supplies Kit for Maker Culture for Kids" id="course09supplies">
                                         </div>
                                         </td>
                                         <td colspan="2" class="ps-sm-3 ps-md-5">Supplies Kit for "Maker Culture for Kids"</td>
@@ -220,7 +220,34 @@
 
                             <div class="my-2 my-md-3 my-lg-5">
                                 <h2 class="text-warning">Identify the attendee.</h2>
-                                <p class="mb-0">Lorem ipsum.</p>
+                                <p class="mb-5">Lorem ipsum.</p>
+
+                                <div class="row">
+                                    <div class="col mb-5">
+                                        <label for="firstName" class="form-label"><sup>*</sup>First Name</label>
+                                        <input type="text" class="form-control" name="firstName" id="firstName" placeholder="First name">
+                                    </div>
+                                    <div class="col mb-5">
+                                        <label for="lastName" class="form-label"><sup>*</sup>Last Name</label>
+                                        <input type="text" class="form-control" name="lastName" id="lastName" placeholder="Last name">
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col mb-5">
+                                        <label for="ageGroup" class="form-label">Age Group</label>
+                                        <select class="form-select" name="ageGroup" id="ageGroup">
+                                            <option>---</option>
+                                        </select>
+                                    </div>
+                                    <div class="col mb-5">
+                                        <label for="membershipLevel" class="form-label">Membership Level</label>
+                                        <select class="form-select" name="membershipLevel" id="membershipLevel">
+                                            <option>---</option>
+                                        </select>
+                                    </div>
+                                </div>
+
                             </div>
 
                             <div class="d-grid gap-2 my-2 my-md-3 my-lg-5">
@@ -231,14 +258,38 @@
 
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-12 col-lg-4">
                     <div class="p-3 bg-dark text-white d-none" id="cost-area">
+
                         <h2 class="fs-1 text-md-center">Cost Estimate</h2>
                         <p class="text-center mb-0">Lorem ipsum.</p>
-                        <p class="col-12 col-md-9 p-2 p-md-3 p-lg-5 my-2 my-md-3 my-lg-5 mx-auto bg-success text-center">
+                        <p class="col-12 col-md-9 p-3 my-3 my-lg-5 mx-auto bg-success text-center">
                             Total:<br>
                             <span class="fs-1" id="total-cost">$0.00</span>
                         </p>
+
+                        <div class="row mb-3">
+                            <div class="col mx-3">
+                                <h3 class="fs-2 text-warning">Attendee Info</h3>
+                                <p class="mb-3">
+                                    <span id="attendee-full-name"></span>
+                                </p>
+                                <p class="mb-3">
+                                    <span id="attendee-age-group"></span>
+                                </p>
+                                <p class="mb-3">
+                                    <span id="attendee-discount"></span>
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col mx-3">
+                                <h3 class="fs-2 text-warning">Course List</h3>
+                                <p class="mb-3" id="attendee-course-list"></p>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
